<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Color Game</string>

    <!-- Options menu -->
    <string name="action_give_hint">Give hint</string>
    <string name="action_new_game">New game</string>
    <string name="action_about">About</string>
    <string name="action_select_difficulty">Difficulty level</string>
    <string name="action_edit_rgb">RGB mixing</string>
    <string name="action_edit_cmy">CMY mixing</string>
    <string name="action_show_values">Show values</string>
    <string name="action_show_buttons">Show buttons</string>

    <!-- Hints -->
    <string name="hint_increase">The %s value is too low</string>
    <string name="hint_decrease">The %s value is too high</string>
    <string name="hint_correct">The colors already match!</string>
    <!-- Color names -->
    <string name="color_red">red</string>
    <string name="color_green">green</string>
    <string name="color_blue">blue</string>
    <string name="color_cyan">cyan</string>
    <string name="color_magenta">magenta</string>
    <string name="color_yellow">yellow</string>

    <string name="tit_select_difficulty">Select difficulty level</string>
    <string name="difficulty_easy">Easy &#8211; step size of 15</string>
    <string name="difficulty_normal">Normal &#8211; step size of 5</string>
    <string name="difficulty_hard">Hard &#8211; all colors selectable</string>

    <!-- Controls -->
    <string name="content_description_decrease_value">Decrease %s value</string>
    <string name="content_description_increase_value">Increase %s value</string>

    <!-- About -->
    <string name="about_game"><![CDATA[
        <p>Your task is to make the two circles have the same color.</p>
        <p>The inner circle\'s color is chosen randomly by the game.</p>
        Moving the sliders you can mix the outer circle\'s color using the additive color system (<font color="#ff6666">red</font>, <font color="#66ff66">green</font>, <font color="#6666ff">blue</font>) as well as the subtractive color system (<font color="#66ffff">cyan</font>, <font color="#ff66ff">magenta</font>, <font color="#ffff66">yellow</font>).]]></string>
    <string name="about_author_with_mail">This application was written by Lennart Meinhardt in 2014&#8211;2015 and completely rewritten in 2017.\n
        \n
        I would be very happy to read your feedback or suggestions!</string>
    <string name="send_email_button_text">Send e-mail</string>
    <string name="email_subject">Color Game for Android</string>
    <string name="view_source_code_button_text">View source code</string>
    <string name="about_source_code">If you are curious how this app works you might be interested in having a look at its source code.</string>

    <!-- Game finished -->
    <string name="tit_correct">Well done!</string>
    <string name="msg_correct">You matched the colors.\n
        \n
        What to do next?</string>
    <string name="game_finished_nothing">Nothing</string>
    <string name="game_finished_new_game">Play again</string>
    <string name="game_finished_quit">Quit</string>

</resources>
